<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewAlarmActivity">

    <!-- Toolbar -->
    <LinearLayout
        android:id="@+id/toolbarLl"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:background="@color/grey_clr"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20sp"
        android:paddingRight="20sp">

        <ImageView
            android:id="@+id/backBtnIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="3sp"
            android:src="@drawable/back_arrow_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:elevation="3sp"
            android:gravity="center"
            android:text="@string/set_new_alarm"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarLl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20sp"
            android:paddingRight="20sp">

            <!-- Time & Picker -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="20sp"
                android:paddingBottom="20sp">

                <TextView
                    android:id="@+id/timeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="02:23"
                    android:textColor="@color/black"
                    android:textSize="60sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/amTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/am"
                        android:textColor="@color/grey_clr"
                        android:textSize="20sp" />

                    <View
                        android:layout_width="3dp"
                        android:layout_height="20sp"
                        android:layout_marginStart="10sp"
                        android:layout_marginEnd="10sp"
                        android:background="@color/grey_clr" />

                    <TextView
                        android:id="@+id/pmTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pm"
                        android:textColor="@color/grey_clr"
                        android:textSize="20sp" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:orientation="vertical">

                <!-- AlarmName -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/alarmNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/alarm_name"
                        android:paddingStart="10sp"
                        android:imeOptions="actionDone"/>

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Sound -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sound"
                        android:textColor="@color/grey_clr"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/ringtoneTv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/default_text"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <!-- Save Button -->
                <Button
                    android:id="@+id/saveBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40sp"
                    android:background="@drawable/btn_bg"
                    android:paddingLeft="100sp"
                    android:paddingRight="100sp"
                    android:text="@string/save" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>